# Cluster_school_project

./: CMakeLists.txt
Projeto2Fase/Projeto2Fase/: Projeto2Fase.vcxproj  commands.c  main.c  statistics.c
Projeto2Fase/Projeto2Fase/x64/Debug/: vc141.idb
Projeto2Fase/Projeto2Fase/x64/Debug/Projeto2Fase.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projeto2Fase.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Projeto2Fase/x64/Debug/: Projeto2Fase.ilk
